--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "type": "module",
   "scripts": {
     "frontend": "npm run dev --prefix frontend",
-    "backend": "nodemon backend/index.js",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
+    "admin": "npm run dev --prefix admin",
+    "dev": "concurrently \"npm run frontend\" \"npm run admin\""
   },
-  "keywords": [],
-  "author": "",
+  "author": "Lester John",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.40.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
+    "react-reveal": "^1.2.2"
+  },
+  "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0"
   }
